# SDL_template

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: config.h.in  main.c
